src/styles/join-banner.scss
.join-banner {
    width: 100%;
    position: relative;
    z-index: 2;
    height: 2500px;
    display: flex;
    flex-direction: column;
    justify-content: start;
    gap: 40vh;
}

.card-container{
    width: 100%;
    overflow-x: hidden;
    position: sticky;
    top: 50%;
    left: 100%;
}

.card {
    margin-left: auto;
    width: fit-content;
    transform: translateX(300px);
    transition: all 1s ease-in-out;
    overflow-y: visible;
    height: 625px;
    
    img {
        width: 480px;
        border-radius: 10px;
    }

    &::after {
        content: "";
        position: absolute;
        top: 0;
        left: 0;
        width: 250vw;
        height: 625px;
        background: linear-gradient(0deg, #003f5f 25%, #0b1426 95%);
        z-index: -1;
        transform: translateX(-50%);
        overflow-y: hidden !important;
    }
}


.card-translation {
    transform: translateX(-5vw);
    transition: all 1s ease-in-out;
}

.first-text {
    margin-top: -700px;
    position: relative;
    z-index: 5;
    color: white;
    width: fit-content;
    width: 50%;
    display: grid;
    place-items: center;
    margin-left: 2rem;
}

.text-trans1 {
    animation: text-trans1 .5s ease-in-out forwards;
}

.text-trans0 {
    animation: text-trans0 .5s ease-in-out forwards;
}

@keyframes text-trans1 {
    0% {
        opacity: 0;
        transform: translateY(100px);
    }

    100% {
        opacity: 1;
        transform: translateY(0px);
    }
}

@keyframes text-trans0 {
    0% {
        opacity: 1;
    }

    100% {
        opacity: 0;
    }

}

.main-text {
    text-align: center;

    h2 {
        font-size: 3.5rem;
        letter-spacing: 3px;
    }

    h1 {
        font-size: calc(7rem + 4vw);
        -webkit-background-clip: text;
        background-image: linear-gradient(298deg, rgb(0, 234, 255) 0%, rgb(0, 111, 255) 99%, rgb(35, 130, 255) 100%);
        color: transparent;
        position: relative;
        height: fit-content;
        margin-bottom: 3.5rem;
        letter-spacing: 2px;

        &::after {
            content: "per year paid in USDC";
            color: white;
            font-size: 1.5rem;
            width: fit-content;
            white-space: nowrap;
            left: 50%;
            transform: translateX(-50%);
            position: absolute;
            bottom: -20px;
        }
    }

    span {
        font-size: 1.25rem;
        position: absolute;
        bottom: 34px;
        right: -40px;
        color: #4194ec;
    }
}

.main-text>* {
    font-weight: 600;
}

.left>*,
.right>* {
    font-weight: 600;
}

.secondary-text {
    display: flex;
    justify-content: space-around;
    width: 100%;
    opacity: 0;
    transform: translateY(100px);
    transition: all 0.5s ease-in-out;
}

.left {

    h3 {
        font-size: 1.5rem;
        color: #4194ec;
        margin-bottom: 1rem;

        span {
            font-size: 2.75rem;
        }
    }

    h4 {
        text-align: center;
        font-size: 1.2rem;
    }
}

.right {

    h3 {
        font-size: 1.5rem;
        color: #4194ec;
        margin-bottom: 1rem;

        span {
            font-size: 2.75rem;
        }
    }

    h4 {
        text-align: center;
        font-size: 1.2rem;
    }
}

.translated {
    transform: translateY(0px) !important;; 
    opacity: 1 !important;
    transition: all 0.5s ease-in-out !important;
}

.second-card {
    width: 50%;
    margin: 0 0 0 2rem;
    transform: translateY(100px);
    transition: all 0.7s ease-in-out;
    opacity: 0;
    box-sizing: border-box;
}

.second-card>* {
    color: white !important;
    position: relative;
    z-index: 2;
}

.earn {
    text-align: center;
    letter-spacing: 2px;

    h1 {
        font-size: calc(20px + 3vw);
        font-weight: 600;
    }

    h4 {
        font-size: 1.5rem;
        font-weight: 500;
        line-height: 150%;
        margin: .75rem 0 2rem 0;
        color: #A0A9BE;
    }
}

.icons {
    display: flex;
    justify-content: space-around;

    div {
        display: flex;
        flex-direction: column;
        text-align: center;

        img {
            width: 150px;
            margin: 0 auto 2.5rem auto;

        }

        h3 {
            font-size: 2rem;
            font-weight: 600;
            
        }

        h2 {
            font-size: calc(3rem + 3vw);
            font-weight: 600;
            color: #4194ec;
        }

        p {
            font-size: 1.75rem;
            font-weight: 500;
        }


    }

}

.extra {
    height: 100vh;
}

.rewards-h1{
    margin: 5rem 0 10rem 0;
    text-align: center;
    font-weight: 600;
    font-size: 4rem;
    -webkit-background-clip: text;
    background-image: linear-gradient(298deg, rgba(0, 234, 255, 1) 0%, rgba(0, 111, 255, 1) 99%, rgba(35, 130, 255, 1) 100%);
    color: transparent;
    letter-spacing: 3px;
    opacity: 0;
}

#earning-button{
    width: 100%;
    display: flex;
    
    button{
        background-color: transparent;
        padding: 1.5rem 5rem;
        border-radius: 50px;
        border: 1px solid white;
        margin: 2rem auto;
        font-size: 1.5rem;
        color: white;
        text-align: center;
        width: 400px;
        transition: all .5s ease-in-out;
        cursor: pointer;
        position: relative;

        &:hover{
            background-color: rgba(87, 87, 87, 0.395)
        }
    }
}

#reward-intro{
    position: relative;
}

#arrow{
    position: absolute;
    transform: translate(10px, 3px) scale(1.35);
}

#rewards{
    position: absolute;
    top: -140px;
}

@media (max-width: 1000px){

    .card-translation{
        transform: translateX(150px);
    }

    .first-text{
        width:100%;
        backdrop-filter: blur(5px);
        border-radius: 20px;
        background-color:  rgba(1, 1, 1, 0.7);
        padding: 2rem 4rem;
        align-self: center;

    }

    .left, .right{
        
        h3{
            font-size: 1rem;
            text-align: center;

            span{
                font-size: 2rem;
            }
        }
    }

    .second-card{
        width:100%;
        margin: 0 auto;
        backdrop-filter: blur(5px);
        border-radius: 20px;
        background-color: rgba(1, 1, 1, 0.7);
        padding: 3rem 2rem
    }
}

@media (max-width: 600px){

    .first-text{
        padding: 2rem 2rem;
    }

    .main-text{

        h1{

            font-size: 6rem;

            span{
                right: -15px;
                bottom: 20px;
            }

            &::after{
                bottom: -35px;
            }
        }
    }

    .second-card{
        padding: 0;
    }

    #earning-button{
        width: 70%;
        margin: 0 auto;
        
        button{
            font-size: 1rem;
            white-space: nowrap;
            width: 200px;
            padding: 1rem 0;
        }
    }

    #arrow{
        transform: translate(5px, -2px);
    }

    .icons{

        div{

            img{
                width: 100px;
            }
        }
    }
}

